--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@jridgewell/sourcemap-codec": "^1.4.14",
     "@reduxjs/toolkit": "^1.8.1",
+    "@rollup/plugin-terser": "^0.4.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -12,9 +14,9 @@
     "axios": "^0.27.2",
     "bootstrap": "^5.1.3",
     "multer": "^1.4.4",
-    "react": "^18.1.0",
+    "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
-    "react-dom": "^18.1.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.1",
     "react-redux": "^8.0.1",
     "react-router-bootstrap": "^0.26.1",
